<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindMe</string>
    <string name="captionSplashScreen">Welcome to FindMe</string>

    <!-- Future intents -->
    <string name="ShareMediaButtonLabel">SHARE</string>

    <!-- Profile Selector Variables -->
    <string name="actTitle_ProfileSelection">Select a Profile</string>
    <string name="captionProfileSelection">FindMe: Profile Selection</string>
    <string name="ManageProfilesHeader">You may…</string>
    <string name="ManageProfilesFooter">… a profile</string>
    <string name="MakeProfileButtonLabel">m a k e</string>
    <string name="TargetProfileButtonLabel">c h a s e</string>
    <string name="ShareProfileButtonLabel">s h a r e</string>
    <string name="GeneralSeparator">or</string>

    <!-- Add Visual Media Variables -->
    <string name="captionAddVisualMedia">FindMe: Add Media</string>
    <string name="textViewTitleAddVisualMedia">Let\'s Get Visual!</string>
    <string name="AddMediaHeader">Make a…</string>
    <string name="AddMediaSeparator">… or share an…</string>
    <string name="NewMedia_btnButtonLabel">n e w</string>
    <string name="OldMedia_btnLabel">o l d</string>
    <string name="AddMediaFooter">… media file</string>

    <!-- Splash Screen Variables -->
    <string name="btnLabelOnSplashScreen">continue</string>
    <string name="titleOnSplashScreen">FindMe:</string>
    <string name="subTitleOnSplashScreen">Be Found!</string>

    <!-- Refactored variables -->
    <string name="action_settings">Settings</string>
</resources>
