






<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginTop="1sp"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context=".SelectProfile"
android:focusableInTouchMode="true">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:singleLine="true"

        android:layout_height="@dimen/TitleTextViewHeight"
        android:textSize="@dimen/OversizeTextSize"
        android:text="@string/actTitle_ProfileSelection"
        android:id="@+id/txtViewProfileSelectionTitle"
        />

    <!-- Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/HeaderTextViewHeight"

        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"

        android:text="@string/ManageProfilesHeader"
        android:id="@+id/txtViewProfileSelectionHeader"/>

    <!-- M A K E  Button -->
    <Button
        android:layout_width="@dimen/LinearLayoutButtonWidth"
        android:layout_height="@dimen/LinearLayoutButtonHeight"
        android:layout_gravity="center_horizontal"
        android:gravity="center"

        android:text="@string/MakeProfileButtonLabel"
        android:id="@+id/btnMakeProfile"   />

    <!-- Separator -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/SeparatorTextViewHeight"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/GeneralSeparator"
        android:id="@+id/txtViewProfileSelectionSeparator1"
        />

    <!-- Target Button -->
    <Button
        android:layout_width="@dimen/LinearLayoutButtonWidth"
        android:layout_height="@dimen/LinearLayoutButtonHeight"
        android:layout_gravity="center_horizontal"
        android:gravity="center"

        android:text="@string/TargetProfileButtonLabel"
        android:id="@+id/btnTargetProfile" />

    <!-- Separator -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/SeparatorTextViewHeight"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/GeneralSeparator"
        android:id="@+id/txtViewProfileSelectionSeparator2"
        />

    <!-- Share Button -->
    <Button
        android:layout_width="@dimen/LinearLayoutButtonWidth"
        android:layout_height="@dimen/LinearLayoutButtonHeight"
        android:layout_gravity="center_horizontal"
        android:gravity="center"

        android:text="@string/ShareProfileButtonLabel"
        android:id="@+id/btnShareProfile" />

    <!-- Footer -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/HeaderTextViewHeight"

        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="bottom"
        android:text="@string/ManageProfilesFooter"
        android:id="@+id/txtViewProfileSelectionFooter"
        />


</LinearLayout>


