<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="info.sparq.findme.SplashScreen">

    <TextView
        android:text="@string/titleOnSplashScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="@dimen/textSizeTopTextViewOnSplash"/>

    <TextView
        android:text="@string/subTitleOnSplashScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:lines="2"
        android:textSize="@dimen/textSizeMiddleViewOnSplash"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnLabelOnSplashScreen"
        android:textSize="@dimen/textSize_btnSplashContinue"
        android:id="@+id/btnSplashContinue"/>
     <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
/>


</LinearLayout>
